--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ section {
     padding: 40px 20px;
     text-align: center;
     border-top: 1px solid rgba(255, 215, 0, 0.1);
-}}
+}
 
 .footer .container {
     display: flex;
